--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div id="vue-app">
     <!-- bag img -->
     <div id="bag" v-bind:class="{burst: ended}">
-
     </div>
 
     <!-- bag health -->
@@ -23,11 +22,9 @@
 
     <!-- game controls -->
     <div id="controls">
-      <button v-on:click="punch" v-show="!ended">Punch</button>
+      <button v-on:click="punch();punchSound();" v-show="!ended">Punch</button>
       <button v-on:click="restart">Restart</button>
     </div>
-
-
   </div>
   
 
